.gcloud/staging/04-deployment-server.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone-server
  namespace: staging
spec:
  replicas: 1 # tells deployment to run 1 pod matching the template
  minReadySeconds: 20
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod-nginx.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        app: drone-server
    spec:
      containers:
      - name: drone-server
        image: drone/drone:latest
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /
            port: 8000
        ports:
        - containerPort: 8000
        volumeMounts:
          # Persist our configs in an SQLite DB in here
          - mountPath: /var/lib/drone
            name: drone-server-sqlite-db
          # Enables Docker in Docker
          - mountPath: /var/run/docker.sock
            name: docker-socket
      volumes:
        - name: drone-server-sqlite-db
          gcePersistentDisk:
            pdName: drone-server-sqlite-db
            fsType: ext4
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
