.gcloud/staging/03-service-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone
  namespace: staging
  labels:
    app: drone-server
spec:
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
  type: NodePort
  selector:
    app: drone-server
