.gcloud/staging/03-service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone-ui
  namespace: staging
  labels:
    app: drone-ui
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  type: NodePort
  selector:
    app: drone-server
